# ftplite

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake_build.yml
include/: AppException.h  CMakeLists.txt
include/client/: ClientProtocolInterpreter.h  exceptions.h  test.h
include/common/: CommunicationWrapper.h  exceptions.h
include/common/connection/: AbstractConnection.h  ActiveStartedConnection.h  PasiveStartedConnection.h  TCPListener.h  exceptions.h
include/common/modes/: StreamMode.h
include/common/types/: ASCIIType.h  AbstractType.h  ImageType.h  exceptions.h
include/server/: ServerProtocolInterpreter.h  exceptions.h
src/: AppException.cpp  CMakeLists.txt
src/client/: CMakeLists.txt  ClientProtocolInterpreter.cpp  main.cpp  test.cpp
src/common/: CMakeLists.txt  CommunicationWrapper.cpp
src/common/connection/: AbstractConnection.cpp  ActiveStartedConnection.cpp  CMakeLists.txt  PasiveStartedConnection.cpp  TCPListener.cpp
src/common/modes/: CMakeLists.txt  StreamMode.cpp
src/common/types/: ASCIIType.cpp  AbstractType.cpp  CMakeLists.txt  ImageType.cpp
src/server/: CMakeLists.txt  ServerProtocolInterpreter.cpp  main.cpp
test-e2e/client/: client_ascii_active  client_ascii_passive  client_image_active  client_image_passive  ftp_commands.sh  script.sh  start_client.sh
test-e2e/server/: server_ascii_active  server_ascii_passive  server_image_active  server_image_passive  start_server.sh
